--- a/config
+++ b/config
@@ -183,7 +183,7 @@ gaps inner 5
 # Colors
 
 # class                 border  backgr. text    indicator
-client.focused          #444444 #444444 #BDBDBD #88D5DF
+client.focused          #444444 #444444 #BDBDBD #BDBDBD
 client.focused_inactive #444444 #232323 #BDBDBD #88D5DF
 client.unfocused        #232323 #232323 #888888 #292d2e
 client.urgent           #2f343a #900000 #ffffff #900000
